# beam_sup

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
beam_sup/: __init__.py  beam_sup.py  config.py  core.py  data_loader.py  format_inputs.py  formatting.py  matrix_utils.py  migration_inference.py  plotting.py  posterior_processing.py  preprocess_datasets.py  simulate.py  statistics.py  tree_inference.py  tree_utils.py
beam_sup/simulator_cpp/: CMakeLists.txt
beam_sup/simulator_cpp/lib/lemon/lib/pkgconfig/: lemon.pc
beam_sup/simulator_cpp/lib/lemon/share/lemon/cmake/: LEMONConfig.cmake
beam_sup/simulator_cpp/src/: cell.cpp  cell.h  migrationgraph.cpp  migrationgraph.h  simulation.cpp  simulation.h  simulationmain.cpp  tree.cpp  tree.h  utils.cpp  utils.h
beam_visualization/: __init__.py  beam_results.py  beam_visualization.py  config.py  core.py  data_loader.py  formatting.py  main.py  plotting.py  statistics.py
tests/: conftest.py  test_beam_sup.py  test_beam_visualization.py  test_core.py
tests/data/: invalid.trees  test.trees
