[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beam_visualization"
version = "0.1.0"
description = "A package for visualizing and analyzing BEAM phylogenetic tree outputs"
authors = [
    {name = "Stephen Staklinski", email = "staklins@cshl.edu"}
]
readme = "README.md"
requires-python = ">=3.6,<3.13"
dependencies = [
    "ete3>=3.1.2",
    "pandas>=1.0.0",
    "dendropy>=4.5.0",
    "numpy>=1.19.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/StephenStaklinski/beam_visualization" 